# libffi

./: fficonfig.h.meson  meson.build  readme.txt  upstream.wrap
include/: meson.build
testsuite/: meson.build
testsuite/libffi.call/: meson.build
